2006-03-17  Richard Levitte  <richard@levitte.org>

	There are times when it is good to be able to prepare for a
	bunch of calls to note_netsync* hooks, as well as to know when
	there are not more such calls to be expected.  To that end, I've
	added note_netsync_start and note_netsync_end, and changed the
	others to take the exact same nonce as those two.  The purpose
	of the nonce is to differentiate between different runs, if they
	ever would run in parallel.

	* lua.cc, lua.hh (lua_hooks::hook_note_netsync_start,
	lua_hooks::hook_note_netsync_end): Added methods.
	(lua_hooks::hook_note_netsync_revision_received,
	lua_hooks::hook_note_netsync_pubkey_received,
	lua_hooks::hook_note_netsync_cert_received): Modified to take a
	nonce.
	* monotone.texi (Hooks): Documented.
	* netsync.cc (session::~session): Modified to call
	app.lua.hook_note_netsync_start and app.lua.hook_note_netsync_end
	as well as the others with the nonce argument.

2006-03-16  Benoît Dejean  <benoit@placenet.org>

	* commands.cc (log): Don't include <sys/time.h>, my mistake.

2006-03-16  Richard Levitte  <richard@levitte.org>

	* revision.cc (construct_revisions_from_ancestry): Linguistics:
	Close a parenthesis.
	* po/sv.po: Translation update.

2006-03-15  Richard Levitte  <richard@levitte.org>

	* diff_patch.cc (unidiff_hunk_writer::advance_to,
	cxtdiff_hunk_writer::advance_to): Because ctx is a size_t, make
	everything dealing with it a size_t as well.  Keeps the compiler
	quiet...

2006-03-15  Matt Johnston  <matt@ucc.asn.au>

	* database.cc (db::load), schema.sql: PRAGMA page_size=8192

2006-03-13  Richard Levitte  <richard@levitte.org>

	* tests/t_serve_ignores_mt_options.at: New test to check that
	'monotone serve' really ignores the contents of an available
	MT/options.
	* testsuite.at: Use it.

2006-03-12  Timothy Brownawell  <tbrownaw@gmail.com>

	* netsync.cc (session::maybe_note_epochs_finished): only begin the
	other refinements if we're the client, as per the comment in refiner.cc
